Fixed spacing for navbar. Focus on polishing, etc.

--- a/styles.css
+++ b/styles.css
@@ -76,16 +76,15 @@ body
 
 .navbar-section
 {
-	width: 25%;
 	text-align: center;
 	font-weight: bold;
-	padding: 20px;
+	padding: 20px 10px;
 }
 
 .btn
 {
 	display: inline-block;
-	padding: 10px 150px;
+	padding: 10px 15px;
 	background-color: #a1a2a6;
 	color: #000000;
 	text-decoration: none;
